--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Grantscraper: Your go-to tool for finding and applying for grants easily and efficiently." />
+    <meta name="description" content="GrantScraper: Your go-to tool for finding and applying for grants easily and efficiently." />
     <meta name="keywords" content="grants, funding, applications, Grantscraper" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" />
-    <title>Grantscraper</title>
+    <title>GrantScraper</title>
   </head>
   <body>
     <div id="root"></div>
