--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="GrantScraper: Your go-to tool for finding and applying for grants easily and efficiently." />
     <meta name="keywords" content="grants, funding, applications, Grantscraper" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
     <title>GrantScraper</title>
   </head>
   <body>
